# LuthfyaRahman

./: README.md
gratifikasi-ai/: .env.example  .gitignore  docker-compose.yml  pyproject.toml
gratifikasi-ai/apps/ai_service/app/: main.py
gratifikasi-ai/apps/ai_service/app/api/: routes.py
gratifikasi-ai/apps/ai_service/app/core/: classifier.py  config.py  embedding.py  qdrant_wrapper.py
gratifikasi-ai/apps/ai_service/app/schemas/: predict.py
gratifikasi-ai/apps/web/: manage.py
gratifikasi-ai/apps/web/compliance/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
gratifikasi-ai/apps/web/web/: celery.py  settings.py  urls.py
gratifikasi-ai/infra/docker/: ai.Dockerfile  web.Dockerfile  worker.Dockerfile
